# dbus

./: README.md  doc.tar.bz2
GAsyncQueue/: Makefile  gasyncqueue.c
doc/: D-Bus-DBusConnection.mht  D-Bus-DBusMessage.mht  D-Bus-Specification.mht
doc/D-Bus学习/: D-Bus学习（一）：总体介绍 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（七）：利用XML定义D-Bus之Client的例子 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（三）：消息 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（九）：利用XML定义D-Bus之Singal收发例子 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（二）：基本概念 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（五）：Signal的收发小例子 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（八）：利用XML定义D-Bus之Server的例子 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（六）：Method的收发小例子 - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht  D-Bus学习（四）：基础小例子（同步和异步） - 愷风（Wei）的专栏 - 博客频道 - CSDN_NET.mht
doc/DBus 入门与应用/: DBus 入门与应用 －－ DBus 的 C 编程接口 - 唐风 - 博客园.mht  DBus 入门与应用－－基本概念 上（C API 级别的使用观点） - 唐风 - 博客园.mht  DBus 入门与应用－－基本概念 下（C API 级别的使用观点） - 唐风 - 博客园.mht
gdbus/: CMakeLists.txt  Makefile  README  main.c
gdbus/src/: server.c
method/: recv.c  send.c
scan/: Makefile  recv  recv.c  scan.c  scan.h
signal/: Makefile  recv.c  send.c
test/: Makefile  client.cpp  server.cpp
